Testing: Inject network faults
Note that for the EBT tests this exercises the "anti-entropy repair",
which implies a causally monotonic sequence of payload messages.

--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -86,7 +86,7 @@ steps:
       #   >     )
       #
       # Default: inline
-      long_list_align: new_line_multiline
+      long_list_align: multiline
 
       # Align empty list (importing instances)
       #
