--- a/stack.yaml
+++ b/stack.yaml
@@ -2,5 +2,7 @@ resolver: lts-13.6
 packages:
 - .
 extra-deps:
+- algebraic-graphs-0.2@sha256:c0700acf56290af3c5e00c2ce83efa16d3524f47a9ed89991353c0f2fd3fb15f
 - focus-0.1.5.2@sha256:fc5c76a5be3a9a1c456106d6f389939299c7e05a1a24938b909f043e36a3e37b
+- hedgehog-quickcheck-0.1@sha256:03bb3c3cb1301d6ad0a6dae13b7bac3d547e82c555bb43b11bf83098d4a4ef22
 - stm-containers-0.2.16@sha256:e98efa8dcf0045ea8a78a04b4e2763cf2d8bc33aad0750e2f30a67f8f4e933b1
