--- a/gossip.cabal
+++ b/gossip.cabal
@@ -90,7 +90,7 @@ library
       , network
       , random
       , serialise
-      , stm-containers < 1
+      , stm-containers >= 1 && < 1.2
       , text
       , time
 
