--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -184,6 +184,8 @@ language_extensions:
   - DeriveFunctor
   - DeriveGeneric
   - DeriveTraversable
+  - DerivingStrategies
+  - DerivingVia
   - FlexibleContexts
   - FlexibleInstances
   - FunctionalDependencies
