--- a/gossip.cabal
+++ b/gossip.cabal
@@ -106,8 +106,8 @@ test-suite tests
         algebraic-graphs == 0.2.*
       , gossip
       , hashable
-      , hedgehog
-      , hedgehog-quickcheck
+      , hedgehog >= 0.6
+      , hedgehog-quickcheck >= 0.1.1
       , microlens
       , QuickCheck
       , random
